Add Google site verification meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>30 Projects 30 Days - My Web Development Journey</title>
   <link rel="stylesheet" href="./assets/css/style.css">
+  <meta name="google-site-verification" content="P65pAY2T9gWZ8DPmMCnTZt6nLFP4QRmNtjelAgkPPcw" />
 </head>
 
 <body>
