Add robots.txt, update image dimensions, and enhance index.html metadata

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>30 Projects 30 Days - My Web Development Journey</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <meta name="description" content="Follow my 30-day web development challenge, where I build 30 projects in 30 days!">
+
   <meta name="google-site-verification" content="P65pAY2T9gWZ8DPmMCnTZt6nLFP4QRmNtjelAgkPPcw" />
+
+  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
