Enhance index.html and style.css with improved metadata, styling adjustments, and update image dimensions

--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -4,8 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digital clock</title>
+  <meta name="description"
+    content="Build a Digital Clock in JavaScript | 30 Projects in 30 Days Web Development Challenge">
+  <meta name="keywords"
+    content="Digital Clock, JavaScript Clock, Web Development, 30 Days Challenge, 30Projects30Days, gautamkaran, karankumar, karangautam">
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+
+  <title>Digital clock | 30Projects30Days</title>
 </head>
 
 <body>
