--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>30 Projects 30 Days - My Web Development Journey</title>
+  <title>30Projects30Days - My Web Development Journey</title>
   <meta name="description" content="Follow my 30-day web development challenge, where I build 30 projects in 30 days!">
-
+  <meta name="keywords"
+    content="web development, JavaScript projects, HTML, CSS, coding challenge, 30 days challenge, frontend development, programming projects, gautamkaran, karankumar, karangautam">
   <meta name="google-site-verification" content="P65pAY2T9gWZ8DPmMCnTZt6nLFP4QRmNtjelAgkPPcw" />
 
   <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
@@ -17,7 +18,7 @@
 
   <header class="header">
     <nav class="flex">
-      <a href="#"><span class="projects30">30ProjectS</span><span class="days30">30DayS</span></a>
+      <a href="#" class="logo"><span class="projects30">30ProjectS</span><span class="days30">30DayS</span></a>
       <a href="https://github.com/gautamkaran/30Projects30days" target="_blank" aria-label="GitHub">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
           <title>GitHub</title>
