--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -20,7 +20,7 @@
         <div class="buttons">
             <button id="startBtn" class="btn">Start</button>
             <button id="stopBtn" class="btn">Stop</button>
-            <button id="resettBtn" class="btn">Reset</button>
+            <button id="resetBtn" class="btn">Reset</button>
         </div>
     </div>
 
