add css for stopwatch project

--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -16,12 +16,13 @@
 <body>
     <div class="stopwatch">
         <h2>Stopwatch</h2>
-        <div class="tinerDisplay">00 : 00 : 00</div>
+        <div class="timerDisplay">00 : 00 : 00</div>
         <div class="buttons">
-            <button id="startBtn" class="btn">Start</button>
-            <button id="stopBtn" class="btn">Stop</button>
-            <button id="resetBtn" class="btn">Reset</button>
+            <button id="startBtn" class="btn" style="--btn-color: green">Start</button>
+            <button id="stopBtn" class="btn" style="--btn-color: red">Stop</button>
+            <button id="resetBtn" class="btn" style="--btn-color: blue">Reset</button>
         </div>
+
     </div>
 
     <script src="script.js"></script>
