--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     Made with ❤️ by Karan Kumar Gautam
   </footer>
 
-  <script src="./assets/data/projects.js"></script>
+  <script src="./assets/data/projects.js" defer></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
