--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </footer>
 
   <script src="./assets/data/projects.js" defer></script>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/script.js" defer></script>
 </body>
 
 </html>
